update frontend , update data and Encrypt data of user